# camera_action

./: .gitignore  CMakeLists.txt  CODE_REVIEW_FINDINGS.md  COMPREHENSIVE_PERFORMANCE_ANALYSIS.md  CRITICAL_FPS_FIX.md  DEBUG_LOGGING_CLEANUP.md  DEBUG_LOGGING_SUMMARY.md  FINAL_DIAGNOSIS.md  FIX_VERIFICATION.md  FRAME_CLONE_REVIEW.md  FRAME_COUNT_ANALYSIS.md  GITHUB_SETUP.md  PERFORMANCE_DIAGNOSIS.md  PERFORMANCE_REVIEW.md  PROD_BRANCH_MATCH.md  READER_BUGS_ANALYSIS.md  README.md  SIMULATION_FINDINGS.md  SIMULATION_README.md  SIMULATION_RESULTS_ANALYSIS.md  TENSORRT_FIXED_BATCH_FIX.md  TIMESTAMP_DRIFT_FIX.md  TIME_WINDOW_BUG_ANALYSIS.md  TIME_WINDOW_INVESTIGATION_SUMMARY.md  VERIFY_FRAME_COUNT_README.md  WAIT_TIME_ANALYSIS.md  bin_file_reader.py  check_onnx_sigmoid.py  compare_tensors.py  compile_commands.json  config.yaml  debug_detections.py  full_output_data.txt  inspect_detections.py  inspect_onnx_output.py  install_cpp_redis.sh  launch_tmux.sh  main_prod_detection.py  main_prod_tracking.py  main_test_tracking.py  (+19 more)
include/: config_parser.h  frame_queue.h  logger.h  preprocessor.h  reader_options.h  redis_queue.h  thread_pool.h  video_clip.h  video_reader.h  yolo_detector.h
python_app/models/: vaccine_processor.py
python_app/module/: alcohol_tensorrt.py  bin_file_reader.py  bin_file_reader_skip.py  hand_manager.py  mapper_bytetrack.py
python_app/tracker/: basetrack.py  byte_tracker.py  bytetrack.yaml
python_app/tracker/utils/: gmc.py  kalman_filter.py  matching.py
python_app/utils/: analyster.py  email_controller.py  utils.py  video_checker.py  video_reader.py
src/: config_parser.cpp  frame_queue.cpp  logger.cpp  main.cpp  preprocessor.cpp  redis_queue.cpp  thread_pool.cpp  trt_infer_cpp.cpp  video_reader.cpp  video_reader.cu  yolo_detector.cpp
